@@ -1,4 +1,12 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 08 Dec 2018 Released 2.3.1 version
+* Update translations from zanata (cs, de, es, fr, ja, pl, pt_BR, uk, zh_CN updated)
+* Avoid some PyGTKDeprecationWarnings
+* Don’t show Unicode 12.0 draft emoji by default in emoji-picker
+* Update emoji data to Unicode 12.0 draft
+* Update emoji annotations from CLDR
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 05 Dec 2018 Released 2.3.0 version
 * Update translations from zanata (de, ja, uk updated)
 * Commit the current preëdit when the focus changes
